Mostrar puntos en el mapa

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,6 +193,7 @@
             success: function(data) {
                 console.log(data)
                 mostrarDatosDetalle(data);
+                reload(fecha_formato)
             },
             error: function(error) {
                 console.error('Error al obtener datos de detalle:', error);
