--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,9 @@
             order: [[0, 'asc']],
             lengthMenu: [[10, 20, 30, -1], [10, 20, 30, 'All']]
         });
-        $('#tabla_resumenes_diario_detalle').DataTable({
-            order: [[0, 'asc']],
-        });
+        // $('#tabla_resumenes_diario_detalle').DataTable({
+        //     order: [[0, 'asc']],
+        // });
         $('.container_imagen').css('display','none');
     });
   </script>
@@ -183,6 +183,9 @@
             nuevaFila = nuevaFila + '<td><button type="button" class="btn btn-primary btn-sm">Ver imágen</button></td></tr>';
             detalleBody.append(nuevaFila);
         }
+        $('#tabla_resumenes_diario_detalle').DataTable({
+            order: [[0, 'asc']],
+        });
     }
 
     function verDetalle(fecha_formato, centro){
