--- a/templates/index.html
+++ b/templates/index.html
@@ -167,6 +167,9 @@
     }
 
     function mostrarDatosDetalle(data) {
+        table = $('#tabla_resumenes_diario_detalle').DataTable({});
+        table.destroy();
+        
         var detalleBody = $('#tabla_resumenes_diario_detalle_body');
         detalleBody.empty();  // Limpiar las filas existentes
 
